--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "near-warchest-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && node dist/index.js",
+    "tsc": "tsc"
   },
   "author": "neozaru",
   "license": "ISC",
   "devDependencies": {
-    "bn.js": "^5.1.2",
+    "typescript": "^3.9.5"
+  },
+  "dependencies": {
     "moment": "^2.27.0",
     "near-api-js": "^0.26.0"
   }
