--- a/warchest-bot.config.json.example
+++ b/warchest-bot.config.json.example
@@ -1,16 +1,17 @@
 {
+  "networkId": "betanet",
+  "nodeUrl": "https://rpc.betanet.near.org",
   "nearKeystoreDir": "./neardev",
   "warchestAccountId": "neozaru14.betanet",
   "poolAccountId": "neozaru.stakehouse.betanet",
-  "watchInterval": 300,
-  "rebalancePolicy": {
-    "type": "BEST",
-    "minRebalanceAmount": "1000000000000000000000000000"
-  },
   "rebalanceLevels": {
     "lowThreshold": 1.1,
     "lowTarget": 1.2,
     "highTarget": 1.8,
     "highThreshold": 1.9
+  },
+  "rebalancePolicy": {
+    "type": "BEST",
+    "minRebalanceAmount": "1000000000000000000000000000"
   }
 }
