config.rebalancePolicy.minRebalanceAmount to use Near unit instead of yocta

--- a/warchest-bot.config.json.example
+++ b/warchest-bot.config.json.example
@@ -12,6 +12,6 @@
   },
   "rebalancePolicy": {
     "type": "BEST",
-    "minRebalanceAmount": "1000000000000000000000000000"
+    "minRebalanceAmount": 1000
   }
 }
