Renamed project to 'suricate' (because why not)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "near-warchest-bot",
-  "version": "1.0.0",
-  "description": "",
+  "name": "suricate",
+  "version": "0.0.1",
+  "description": "Monitoring program for Near Protocol validators",
   "main": "dist/index.js",
   "scripts": {
     "start": "tsc && node dist/index.js monitor",
