CLI/config arguments management

--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.0.1",
   "description": "Monitoring program for Near Protocol validators",
   "main": "dist/index.js",
+  "bin": {
+    "suricate": "./dist/index.js"
+  },
   "scripts": {
-    "start": "tsc && node dist/index.js monitor",
+    "start": "tsc && node dist/index.js monitor --config suricate.config.json",
     "tsc": "tsc"
   },
+  "keywords": ["near", "suricate", "monitor", "pool", "stake"],
+  "preferGlobal": true,
   "author": "neozaru",
   "license": "ISC",
   "devDependencies": {
