--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "start": "tsc && node dist/index.js monitor --config suricate.config.json",
     "tsc": "tsc"
   },
-  "keywords": ["near", "suricate", "monitor", "pool", "stake"],
+  "keywords": [
+    "near",
+    "suricate",
+    "monitor",
+    "pool",
+    "stake"
+  ],
   "preferGlobal": true,
   "author": "neozaru",
   "license": "ISC",
@@ -20,6 +26,7 @@
   },
   "dependencies": {
     "near-api-js": "^0.26.0",
+    "nodemailer": "^6.4.10",
     "server": "^1.0.29",
     "winston": "^3.3.3",
     "yargs": "^15.3.1"
