--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "near-suricate",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Monitoring program for Near Protocol validators",
   "homepage": "https://github.com/neozaru/near-suricate",
   "main": "dist/index.js",
@@ -28,6 +28,7 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "lodash": "^4.17.15",
     "near-api-js": "^0.26.0",
     "nodemailer": "^6.4.10",
     "server": "^1.0.29",
