--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "near-suricate",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Monitoring program for Near Protocol validators",
   "homepage": "https://github.com/neozaru/near-suricate",
   "main": "dist/index.js",
@@ -32,6 +32,7 @@
     "near-api-js": "^0.28.0",
     "nodemailer": "^6.4.10",
     "server": "^1.0.29",
+    "telegraf": "^3.38.0",
     "winston": "^3.3.3",
     "yargs": "^15.3.1"
   }
